[gd_scene load_steps=10 format=3 uid="uid://bsifisif6gm4g"]

[ext_resource type="Script" path="res://Scripts/GasterBlaster.gd" id="1_k21t1"]
[ext_resource type="Texture2D" uid="uid://r6uu6r3m3exo" path="res://Sprites/spr_gasterblaster_0.png" id="2_iupqo"]
[ext_resource type="Texture2D" uid="uid://4u5x028atapu" path="res://Sprites/spr_gasterblaster_1.png" id="3_e7cny"]
[ext_resource type="Texture2D" uid="uid://diad8r8pak2g3" path="res://Sprites/spr_gasterblaster_2.png" id="4_k20s1"]
[ext_resource type="Texture2D" uid="uid://d25shf0mwo5ri" path="res://Sprites/spr_gasterblaster_3.png" id="5_72o80"]
[ext_resource type="Texture2D" uid="uid://dd6ve8qc3thh4" path="res://Sprites/spr_gasterblaster_4.png" id="6_udu4g"]
[ext_resource type="Texture2D" uid="uid://ccabctxxeqw20" path="res://Sprites/spr_gasterblaster_5.png" id="7_j4kie"]
[ext_resource type="Texture2D" uid="uid://6chmuh6mxcev" path="res://Sprites/Beam.png" id="8_fvpt7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pwlj2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iupqo")
}, {
"duration": 1.0,
"texture": ExtResource("3_e7cny")
}, {
"duration": 1.0,
"texture": ExtResource("4_k20s1")
}, {
"duration": 1.0,
"texture": ExtResource("5_72o80")
}],
"loop": false,
"name": &"beam_up",
"speed": 28.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_udu4g")
}, {
"duration": 1.0,
"texture": ExtResource("7_j4kie")
}],
"loop": true,
"name": &"blast",
"speed": 24.0
}]

[node name="Blaster" type="Node2D"]
script = ExtResource("1_k21t1")

[node name="GasterBlaster" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(-1, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pwlj2")
animation = &"beam_up"

[node name="Beam" type="Sprite2D" parent="GasterBlaster"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(0.5, 25)
scale = Vector2(1e-05, 1.5)
texture = ExtResource("8_fvpt7")
centered = false
offset = Vector2(-12, 0)

[node name="TimerIdle" type="Timer" parent="."]
one_shot = true

[node name="VSN" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 54)
rect = Rect2(-5, -10, 10, 10)

[connection signal="timeout" from="TimerIdle" to="." method="_on_timer_idle_timeout"]
